--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -13,7 +13,7 @@ patchesStrategicMerge:
 resources:
   # This ArgoCD Application enables us to use cascad deployment, we in some way delegate application-specific deployments
   # to the different repository
-  # - ./devqa-applications.yaml
+  - ./prod-applications.yaml
   # This Application automates delivery of changes to ArgoCD instance itself
   - ./self.yaml
   # Here we enforce security measures, so our development and qa teams couldn't create Cluster Roles for example.
