--- a/argocd-ingress.yaml
+++ b/argocd-ingress.yaml
@@ -5,7 +5,8 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: "nginx"
     cert-manager.io/cluster-issuer: "letsencrypt"
-    nginx.ingress.kubernetes.io/app-root: "/"
+    kubernetes.io/tls-acme: "true"
+    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
 spec:
   tls:
   - hosts:
@@ -21,4 +22,4 @@ spec:
           service:
             name: argocd-server
             port:
-              name: http
+              name: https
